--- a/assignments/Untitled.ipynb
+++ b/assignments/Untitled.ipynb
@@ -1308,8 +1308,8 @@
     "    secs = 20\n",
     "    \n",
     "#URL = 'https://games.crossfit.com/leaderboard/open/2021?view=0&division=1&region=0&scaled=0&sort=0&page=654'\n",
-    "#URL=\"https://games.crossfit.com/leaderboard/open/2021\"\n",
-    "URL = \"https://games.crossfit.com/leaderboard/open/2021?view=0&division=1&region=0&scaled=0&sort=0&page=245\"\n",
+    "URL=\"https://games.crossfit.com/leaderboard/open/2021\"\n",
+    "#URL = \"https://games.crossfit.com/leaderboard/open/2021?view=0&division=1&region=0&scaled=0&sort=0&page=245\"\n",
     "#URL=\"https://games.crossfit.com/leaderboard/open/2021?view=0&division=1&region=0&scaled=0&sort=0&page=2750\"\n",
     "\n",
     "driver = wd.Chrome(executable_path = PATH)\n",
@@ -1333,7 +1333,7 @@
     "    close.click()\n",
     "\n",
     "    i = 0\n",
-    "    for i in range(0,2):\n",
+    "    for i in range(0,2750):\n",
     "        print(\"index is now {}\".format(i))\n",
     "        thirdDiv = driver.find_element_by_id('leaderboardSponsorVisible')\n",
     "        table_class = thirdDiv.find_element_by_xpath(\"//table[@class='desktop athletes']\")\n",
@@ -1424,7 +1424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
