--- a/Black_Box_ML/Module+1.ipynb
+++ b/Black_Box_ML/Module+1.ipynb
@@ -27,11 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/noahbranch/Documents/CodeAndDev.nosync/MachineLearning/MatPlotLib/MatPlotLib_virt/lib/python3.7/site-packages/ipykernel_launcher.py:7: FutureWarning: read_table is deprecated, use read_csv instead, passing sep='\\t'.\n",
+      "  import sys\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib notebook\n",
     "import numpy as np\n",
@@ -39,23 +46,133 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "fruits = pd.read_table('readonly/fruit_data_with_colors.txt')"
+    "fruits = pd.read_table('fruit_data_with_colors.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fruit_label</th>\n",
+       "      <th>fruit_name</th>\n",
+       "      <th>fruit_subtype</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>width</th>\n",
+       "      <th>height</th>\n",
+       "      <th>color_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>apple</td>\n",
+       "      <td>granny_smith</td>\n",
+       "      <td>192</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>0.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>apple</td>\n",
+       "      <td>granny_smith</td>\n",
+       "      <td>180</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>0.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>apple</td>\n",
+       "      <td>granny_smith</td>\n",
+       "      <td>176</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>0.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>mandarin</td>\n",
+       "      <td>mandarin</td>\n",
+       "      <td>86</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>0.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>mandarin</td>\n",
+       "      <td>mandarin</td>\n",
+       "      <td>84</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>0.79</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   fruit_label fruit_name fruit_subtype  mass  width  height  color_score\n",
+       "0            1      apple  granny_smith   192    8.4     7.3         0.55\n",
+       "1            1      apple  granny_smith   180    8.0     6.8         0.59\n",
+       "2            1      apple  granny_smith   176    7.4     7.2         0.60\n",
+       "3            2   mandarin      mandarin    86    6.2     4.7         0.80\n",
+       "4            2   mandarin      mandarin    84    6.0     4.6         0.79"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fruits.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 'apple', 2: 'mandarin', 3: 'orange', 4: 'lemon'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create a mapping from fruit label value to fruit name to make results easier to interpret\n",
     "lookup_fruit_name = dict(zip(fruits.fruit_label.unique(), fruits.fruit_name.unique()))   \n",
@@ -78,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,8 +206,8 @@
     "y = fruits['fruit_label']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)\n",
     "\n",
-    "cmap = cm.get_cmap('gnuplot')\n",
-    "scatter = pd.scatter_matrix(X_train, c= y_train, marker = 'o', s=40, hist_kwds={'bins':15}, figsize=(9,9), cmap=cmap)"
+    "#cmap = cm.get_cmap('gnuplot')\n",
+    "#scatter = pd.plotting.scatter_matrix(X_train, c= y_train, marker = 'o', s=40, hist_kwds={'bins':15}, figsize=(9,9), cmap=cmap)"
    ]
   },
   {
@@ -120,10 +237,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# For this example, we use the mass, width, and height features of each fruit instance\n",
@@ -143,10 +258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -163,9 +276,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier()"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "knn.fit(X_train, y_train)"
    ]
@@ -179,9 +303,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/noahbranch/Documents/CodeAndDev.nosync/MachineLearning/MatPlotLib/MatPlotLib_virt/lib/python3.7/site-packages/sklearn/base.py:442: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
+      "  \"X does not have valid feature names, but\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.5333333333333333"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "knn.score(X_test, y_test)"
    ]
@@ -195,9 +338,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/noahbranch/Documents/CodeAndDev.nosync/MachineLearning/MatPlotLib/MatPlotLib_virt/lib/python3.7/site-packages/sklearn/base.py:442: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
+      "  \"X does not have valid feature names, but\"\n",
+      "/Users/noahbranch/Documents/CodeAndDev.nosync/MachineLearning/MatPlotLib/MatPlotLib_virt/lib/python3.7/site-packages/sklearn/base.py:442: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
+      "  \"X does not have valid feature names, but\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'mandarin'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# first example: a small fruit with mass 20g, width 4.3 cm, height 5.5 cm\n",
     "fruit_prediction = knn.predict([[20, 4.3, 5.5]])\n",
@@ -206,9 +370,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/noahbranch/Documents/CodeAndDev.nosync/MachineLearning/MatPlotLib/MatPlotLib_virt/lib/python3.7/site-packages/sklearn/base.py:442: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
+      "  \"X does not have valid feature names, but\"\n",
+      "/Users/noahbranch/Documents/CodeAndDev.nosync/MachineLearning/MatPlotLib/MatPlotLib_virt/lib/python3.7/site-packages/sklearn/base.py:442: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
+      "  \"X does not have valid feature names, but\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'lemon'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# second example: a larger, elongated fruit with mass 100g, width 6.3 cm, height 8.5 cm\n",
     "fruit_prediction = knn.predict([[100, 6.3, 8.5]])\n",
@@ -224,9 +409,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'adspy_shared_utilities'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-23a3042c9d11>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0madspy_shared_utilities\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mplot_fruit_knn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mplot_fruit_knn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'uniform'\u001b[0m\u001b[0;34m)\u001b[0m   \u001b[0;31m# we choose 5 nearest neighbors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'adspy_shared_utilities'"
+     ]
+    }
+   ],
    "source": [
     "from adspy_shared_utilities import plot_fruit_knn\n",
     "\n",
