trying to fix everything

--- a/Text_Mining/Assignment+2.ipynb
+++ b/Text_Mining/Assignment+2.ipynb
@@ -271,7 +271,7 @@
     "\n",
     "answer_two()\n",
     "\n",
-    "'''this one should have been easy. But we I converted everyting to lowercase wo that 'whale' and\n",
+    "'''this one should have been easy. But once I converted everyting to lowercase  'whale' and\n",
     "'Whale' would be the same thing. I started to just get a count from that list and jus tuse a for\n",
     "loop to get out every occurance of 'whale'. I decided lets see if there are any tools I \n",
     "can use in this library. I forgor about the frequency ditribution function.\n",
@@ -327,7 +327,7 @@
     "    return dist.most_common(20)# Your answer here\n",
     "\n",
     "answer_three()\n",
-    "'''I pretty much jsut grabe the first two lines form the previous seciton. \n",
+    "'''I pretty much just grab the first two lines form the previous seciton. \n",
     "Then I had to do a bit of googling as any developer would if they don't know. \n",
     "I came accross the most_common funciton which pretty much returns exactly what I needed.'''"
    ]
@@ -525,7 +525,7 @@
     "In the for loop I just start tallying up the number of words and after the for loop I simply\n",
     "divide the total number of tokens by the the number of senctences. \n",
     "There may be a better way of doing htis by simply using the nltk library but I didn't look\n",
-    "up a way for this solution\n",
+    "up a way using that solution.\n",
     "'''"
    ]
   },
@@ -577,7 +577,7 @@
     "\n",
     "answer_eight()\n",
     "\n",
-    "''' The first two line Ijust pull formt the example in the module2 notebook. \n",
+    "''' The first two lines I just pull from the example in the module2 notebook. \n",
     "I pretty much get the POS for each tag. Then I needed some help. stack overflow pretty much gave\n",
     "me this answer. But, for each tuple in pos_tags we store the tag. Then We use the FreqDist to \n",
     "grab the most frequent tags. We can then use the most_common function to grab the \n",
